@@ -1,5 +1,6 @@
 AUX 99devkitpro 94 RMD160 c2b8614753cdeb3d8ca6541d714d324dd1ad9d93 SHA1 828fcde98cb7320bfbacc734f4b5370b976266dd SHA256 3787d368a52f45e318133058e561aa47f3fbe979910d1b85afa3c1b62179ae8f
-DIST devkitARM_r23b-i686-linux.tar.bz2 21534610 RMD160 dea6fe0b3624ede97429a034426c1772ddadd161 SHA1 93d509dbf1aa92ca1b730dba07af16614e42d06f SHA256 90e5afaafed6e77bea6260453a803ba6720cb70b4595711eafa43bdb7fc547fc
-EBUILD devkitarm-bin-23b.ebuild 687 RMD160 bc9ce7ccf591202f8ccd26b7f982df9d34a6d104 SHA1 68976b08a33fef3ee0176cf8b8712cc525e845e1 SHA256 e8da2b4bef3c092d862e9e4769dcd5e290bc83067d346d8e5509feca8b7daa8e
-MISC ChangeLog 1166 RMD160 777e3e7c0f5b74061ee9d5b8e5242d560dc38b8d SHA1 e63924f2e65560bbbe5f63affe53156428dacff9 SHA256 982a3976e7aa2251303620161f7610892e4eee7927e06f61c416a8c18ac4da8e
+DIST devkitARM_r30-i686-linux.tar.bz2 29716312 RMD160 0bb1fcf110a19be51002a46a548d79e92f59b5a8 SHA1 8dbb4d58bcc7d68b78c95712e9f8c123839541c6 SHA256 4ebf76eb063a1bc7f05668a5d586b6e137cd3e05584a9221d951841e83b9a578
+DIST devkitARM_r30-x86_64-linux.tar.bz2 33722555 RMD160 c6b52e0cbc7b02294f7f61b108e5f2bfb0db9545 SHA1 90b93605aca59dd9cbd03d2ce245f19a9be1c0a3 SHA256 c6146785bcfb07b9cb80b45423cfa3d28e58bb10f948d7e01efbf48c9eea388b
+EBUILD devkitarm-bin-30.ebuild 778 RMD160 5404862a928e4deeca50fa25dff85be45df4879f SHA1 ef42fe934ba4fd2cb84213173da4485077cf4006 SHA256 7926b4e3b367f32517f1acb0875c0bbd5d557375276f6442b808e3cbfe622386
+MISC ChangeLog 1349 RMD160 1cc639d4e99786f8fb14bd6404a609be4c149d2b SHA1 c9b8ceeb8540a5bd6987a8b0d92cff296fe87345 SHA256 4e41a14fcaca9263ff91117ed6ee8c56332f05270ff42ea53338ed19d8c533b4
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
